--- a/ricordi/pubspec.yaml
+++ b/ricordi/pubspec.yaml
@@ -58,7 +58,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/teamhobbits1.jpg
+    - assets/images/ricordi-1.jpg
+    - assets/images/ricordi-2.jpg
+    - assets/images/ricordi-3.jpg
+    - assets/images/ricordi-4.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
